Fix overflow titles

--- a/pages/components/TitlePage/titlepage.module.css
+++ b/pages/components/TitlePage/titlepage.module.css
@@ -8,6 +8,7 @@
   padding-bottom: 6rem;
   margin-bottom: 3rem;
   box-shadow: var(--shadow-hard);
+  
 }
 
 .wrapper > img {
@@ -40,12 +41,13 @@
 }
 
 .wrh1 {
-  font-size: 7rem;
+  font-size: 6rem;
   font-weight: bold;
   overflow: hidden;
   text-overflow: ellipsis;
   color: var(--body);
   width: fit-content;
+  max-width: calc(100% - 2 * 1rem);
   margin: 1rem;
   border: none;
   box-shadow: none;
